--- a/en/core/weaponList.html
+++ b/en/core/weaponList.html
@@ -52,6 +52,90 @@
                     <img src="/Asset/M1.gif" alt="武器3">
                     <p>武器3</p>
                 </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
+                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
+                    <p>BrinyBaron</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器2">
+                    <p>武器2</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器3">
+                    <p>武器3</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
+                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
+                    <p>BrinyBaron</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器2">
+                    <p>武器2</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器3">
+                    <p>武器3</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
+                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
+                    <p>BrinyBaron</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器2">
+                    <p>武器2</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器3">
+                    <p>武器3</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
+                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
+                    <p>BrinyBaron</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器2">
+                    <p>武器2</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器3">
+                    <p>武器3</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
+                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
+                    <p>BrinyBaron</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器2">
+                    <p>武器2</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器3">
+                    <p>武器3</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
+                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
+                    <p>BrinyBaron</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器2">
+                    <p>武器2</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器3">
+                    <p>武器3</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
+                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
+                    <p>BrinyBaron</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器2">
+                    <p>武器2</p>
+                </div>
+                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
+                    <img src="/Asset/M1.gif" alt="武器3">
+                    <p>武器3</p>
+                </div>
             </div>
         </main>
     </div>
