--- a/cn/weapon/BansheeHook.html
+++ b/cn/weapon/BansheeHook.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>示例武器介绍模板-灾厄大修Wiki</title>
+    <title>女妖之爪-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,38 +37,39 @@
         </aside>
 
         <main class="main-content">
-            <h1>示例武器介绍模板</h1>
+            <h1>女妖之爪</h1>
             <p> 
-                示例武器介绍模板是一把.....的....武器，掉落.....<br>
+                女妖之爪是一把.....的....武器，掉落.....<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 它的最佳前缀是...
             </p>
-            <img src="/Asset/M1.gif" alt="M1" width=600>
-            <p class="extra-tip">——额外tip</p>
+            <img src="BansheeHook.png" alt="BansheeHook" width=600>
+            <!--<p class="extra-tip">——额外tip</p>-->
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Banshee_Hook">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/BansheeHookEcType.cs">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">示例武器介绍模板</h1>
-            <img src="/Asset/M1.gif" alt="M1">
-            <p class="item-id">内部名: 示例武器介绍模板</p>
+            <h1 class="img-Item-Title">女妖之爪</h1>
+            <img src="BansheeHook.png" alt="BansheeHook">
+            <p class="item-id">内部名: BansheeHook</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 220</p>
+            <p class="item-knockback">击退: 8.5</p>
+            <p class="item-usetimer">使用时间: 21</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                攻击时生成大量哀怨之镰，并发射一个追杀敌人的惊惧巨镰<br>
+			    右键积蓄惊惧能量，在能量耗尽前将在鼠标位置召唤大量憎恶镰刀，<br>
+			    憎恶镰刀击中敌人后会额外生成大量的怨灵，给予多种增益<br>
+			    "这个爪子当年在伸出电视机一半的时候因为停电而卡住了，或许它的怨念就是来源于这儿"
             </p>
         </div>        
     </div>
