--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -44,13 +44,20 @@
                     <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
                     <p>海爵剑</p>
                 </div>
+
                 <div class="weapon-item" onclick="location.href='/cn/weapon/BansheeHook.html'">
                     <img src="/cn/weapon/BansheeHook.png" alt="BansheeHook">
                     <p>女妖之爪</p>
                 </div>
+
                 <div class="weapon-item" onclick="location.href='/cn/weapon/BlightedCleaver.html'">
                     <img src="/cn/weapon/BlightedCleaver.png" alt="BlightedCleaver">
                     <p>凋亡屠刀</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/BurntSienna.html'">
+                    <img src="/cn/weapon/BurntSienna.png" alt="BurntSienna">
+                    <p>灼炎弯刀</p>
                 </div>
             </div>
         </main>
