--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -59,6 +59,17 @@
                     <img src="/cn/weapon/BurntSienna.png" alt="BurntSienna">
                     <p>灼炎弯刀</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/CometQuasher.html'">
+                    <img src="/cn/weapon/CometQuasher.png" alt="CometQuasher">
+                    <p>彗星陨刃</p>
+                </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/DefiledGreatsword.html'">
+                    <img src="/cn/weapon/DefiledGreatsword.png" alt="DefiledGreatsword">
+                    <p>神殇巨剑</p>
+                </div>
+
             </div>
         </main>
     </div>
