--- a/cn/weapon/DefiledGreatsword.html
+++ b/cn/weapon/DefiledGreatsword.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>示例武器介绍模板-灾厄大修Wiki</title>
+    <title>神殇巨剑-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,16 +37,16 @@
         </aside>
 
         <main class="main-content">
-            <h1>示例武器介绍模板</h1>
+            <h1>神殇巨剑</h1>
             <p> 
-                示例武器介绍模板是一把.....的....武器，掉落.....<br>
+                神殇巨剑是一把.....的....武器，掉落.....<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 它的最佳前缀是...
             </p>
-            <img src="/Asset/M1.gif" alt="M1" width=600>
+            <img src="DefiledGreatsword.png" alt="M1" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -57,7 +57,7 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">示例武器介绍模板</h1>
+            <h1 class="img-Item-Title">神殇巨剑</h1>
             <img src="DefiledGreatsword.png" alt="DefiledGreatsword">
             <p class="item-id">内部名: DefiledGreatsword</p>
             <p class="item-property">基本属性</p>
