--- a/cn/weapon/DefiledGreatsword.html
+++ b/cn/weapon/DefiledGreatsword.html
@@ -61,7 +61,7 @@
             <img src="DefiledGreatsword.png" alt="DefiledGreatsword">
             <p class="item-id">内部名: DefiledGreatsword</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 1000000</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
