--- a/cn/weapon/BrinyBaron.html
+++ b/cn/weapon/BrinyBaron.html
@@ -62,7 +62,7 @@
 
         <div class="image-block">
             <h1 class="img-Item-Title">海爵剑</h1>
-            <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
+            <img src="BrinyBaron.png" alt="BrinyBaron">
             <p class="item-id">内部名: BrinyBaron</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 110</p>
