--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -41,7 +41,7 @@
             <p>点击任何武器以查看详细信息。</p>
             <div class="weapon-grid">
                 <div class="weapon-item" onclick="location.href='/cn/weapon/BrinyBaron.html'">
-                    <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
+                    <img src="/cn/weapon/BrinyBaron.png" alt="BrinyBaron">
                     <p>海爵剑</p>
                 </div>
 
@@ -70,6 +70,10 @@
                     <p>神殇巨剑</p>
                 </div>
 
+                <div class="weapon-item" onclick="location.href='/cn/weapon/EntropicClaymore.html'">
+                    <img src="/cn/weapon/EntropicClaymore.png" alt="EntropicClaymore">
+                    <p>熵之舞</p>
+                </div>
             </div>
         </main>
     </div>
