--- a/cn/weapon/BlightedCleaver.html
+++ b/cn/weapon/BlightedCleaver.html
@@ -39,17 +39,16 @@
         <main class="main-content">
             <h1>凋亡屠刀</h1>
             <p> 
-                凋亡屠刀是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                凋亡屠刀是一把困难模式可制作的近战武器，是凋亡之刃的升级版本<br>
+                凋亡屠刀仅可左键使用，当未使用剑刃攻击到敌人时候，凋亡屠刀不会具有充能，无法挥砍出剑气。<br>
+                使用剑刃攻击敌人时候，凋亡屠刀会持续充能，并且攻击速度增加，挥砍范围变成圆形区域，并且对攻击到的每一个敌人产生额外的镰刀追击。<br>
+                当具有充能时，凋亡屠刀的挥砍会产生一个短距离的圆形剑气，并且附带追踪效果。<br>
+                它的最佳前缀是传奇
             </p>
             <img src="BlightedCleaver.png" alt="M1" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Blighted_Cleaver">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -58,17 +57,16 @@
 
         <div class="image-block">
             <h1 class="img-Item-Title">凋亡屠刀</h1>
-            <img src="BlightedCleaver.png" alt="M1">
+            <img src="BlightedCleaver.png" alt="BlightedCleaver">
             <p class="item-id">内部名: BlightedCleaver</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 60</p>
+            <p class="item-knockback">击退: 普通击退力</p>
+            <p class="item-usetimer">使用时间: 普通速度</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                刀刃击中敌人会积攒暴君能量，并生成大量的屠杀之镰<br>
+                "只有让这把刀痛饮鲜血，它才会会想起当年被魔君使用时的强大力量"
             </p>
         </div>        
     </div>
