--- a/cn/weapon/BurntSienna.html
+++ b/cn/weapon/BurntSienna.html
@@ -39,12 +39,9 @@
         <main class="main-content">
             <h1>灼炎弯刀</h1>
             <p> 
-                灼炎弯刀是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                灼炎弯刀是一把困难模式之前的阔剑，掉落自古墓爬行者（也名为沙漠蠕虫）。<br>
+                鼠标左键攻击会释放沙球，沙球攻击到敌人会有爆炸效果，但是没有范围伤害，沙球受重力影响。<br>
+                它的最佳前缀是传奇
             </p>
             <img src="BurntSienna.png" alt="BurntSienna" width=600>
             <!--<p class="extra-tip">——额外tip</p>-->
@@ -61,14 +58,13 @@
             <img src="BurntSienna.png" alt="BurntSienna">
             <p class="item-id">内部名: BurntSienna</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 22</p>
+            <p class="item-knockback">击退: 普通击退</p>
+            <p class="item-usetimer">使用时间: 普通速度</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                挥舞会抛射沙球<br>
+                "时间或许会让其它武器锈迹斑斑，但是这把刀永远不会改变"
             </p>
         </div>        
     </div>
