--- a/cn/weapon/CometQuasher.html
+++ b/cn/weapon/CometQuasher.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>示例武器介绍模板-灾厄大修Wiki</title>
+    <title>彗星陨刃-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,16 +37,18 @@
         </aside>
 
         <main class="main-content">
-            <h1>示例武器介绍模板</h1>
+            <h1>彗星陨刃</h1>
             <p> 
-                示例武器介绍模板是一把花后的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                彗星陨刃是一把困难模式后可制作的近战武器。<br>
+                彗星陨刃只具有左键的攻击方式，按住鼠标左键时，可以发射陨石弹幕，命中敌人造成两次爆炸伤害。<br>
+                当使用剑刃攻击到敌人时，彗星陨刃会额外从上方发射陨石弹幕。<br>
+                它的最佳前缀是传奇
             </p>
             <img src="CometQuasher.png" alt="CometQuasher" width=600>
+            <p>
+                彗星陨刃的陨石弹幕具有小范围的爆炸伤害，用非剑刃的弹幕攻击会造成武器面板的一半伤害；<br>
+                而剑刃攻击生成的陨石弹幕仅造成武器面板的四分之一伤害。
+            </p>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Comet_Quasher">查看原版信息</a>
@@ -57,13 +59,13 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">示例武器介绍模板</h1>
+            <h1 class="img-Item-Title">彗星陨刃</h1>
             <img src="CometQuasher.png" alt="CometQuasher">
             <p class="item-id">内部名: CometQuasher</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 80</p>
+            <p class="item-knockback">击退: 很弱击退力</p>
+            <p class="item-usetimer">使用时间: 普通速度</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 发射陨石，真近战击中敌人让更多的陨石从天而降<br>
