--- a/cn/weapon/DefiledGreatsword.html
+++ b/cn/weapon/DefiledGreatsword.html
@@ -39,17 +39,20 @@
         <main class="main-content">
             <h1>神殇巨剑</h1>
             <p> 
-                神殇巨剑是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是...
+                神殇巨剑是一把月球领主后可制作的近战武器，由凋亡屠刃升级而来。<br>
+                神殇巨剑未充能时，会发射圆形的追踪剑气。<br>
+                当用剑刃攻击敌人时，神殇巨剑的攻击速度大幅提升，逐渐为神殇巨剑进行充能，且取消剑气攻击，从两侧额外追加丛林之镰进行追击。<br>
+                神殇巨剑具有充能时，攻速会显著提升，并且会向玩家各方位发射剑气，剑气会追踪敌人<br>
+                它的最佳前缀是传奇
             </p>
             <img src="DefiledGreatsword.png" alt="M1" width=600>
+            <p>
+                当神殇巨剑剑刃攻击到敌人时，会给予玩家5秒的残酷杀戮增益，提供 +20% 近战伤害；<br>
+                充能状态下的神殇巨剑会造成武器面板的剑气伤害，未充能仅造成武器面板的百分之七十五。
+            </p>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href=https://calamitymod.wiki.gg/wiki/Defiled_Greatsword>查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -61,14 +64,13 @@
             <img src="DefiledGreatsword.png" alt="DefiledGreatsword">
             <p class="item-id">内部名: DefiledGreatsword</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 1000000</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 112</p>
+            <p class="item-knockback">击退: 很强击退力</p>
+            <p class="item-usetimer">使用时间: 慢速度</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                刀刃击中敌人会积攒暴君能量，并生成大量的丛林之镰<br>
+                "鲜血，屠戮，征服，这把刀在慢慢苏醒。它到底是回忆起了当年的魔君，还是痴迷于现在的你？"
             </p>
         </div>        
     </div>
