--- a/cn/weapon/EntropicClaymore.html
+++ b/cn/weapon/EntropicClaymore.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>女妖之爪-灾厄大修Wiki</title>
+    <title>熵之舞-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,42 +37,39 @@
         </aside>
 
         <main class="main-content">
-            <h1>女妖之爪</h1>
+            <h1>熵之舞</h1>
             <p> 
-                女妖之爪是一把月球领主后的近战武器，掉落自噬魂幽花（Polterghast），左键长按可以自动使用。<br>
-                它的攻击方式分别为鼠标左键和鼠标右键两种攻击模式。<br>
-                鼠标左键会释放镰刀射弹与近距离的飞行的四个分裂镰刀射弹，镰刀射弹经过短暂飞行后会追踪敌人，分裂的镰刀射弹经过短暂飞行后消失。<br>
-                鼠标右键会吟唱两秒，并且在此期间会从自身发射环形的镰刀弹幕与鬼火；<br>
-                吟唱结束后会在鼠标位置生存镰刀射弹，镰刀射弹击中敌人后会产生深渊幽魂进行追击。<br>
+                熵之舞是一把困难模式后可制作的近战武器。<br>
+                熵之舞左键攻击会发射等离子弹幕，等离子弹幕会向鼠标光标位置而攻击。<br>
+                等离子弹幕分别会从剑刃两侧发射。<br>
                 它的最佳前缀是神级
             </p>
-            <img src="BansheeHook.png" alt="BansheeHook" width=600>
+            <img src="EntropicClaymore.png" alt="M1" width=600>
             <p>
-                右键所造成的弹幕伤害仅有原本伤害的一半，并且附带多种减益效果。
+                等离子弹幕造成武器面板的三分之二的伤害；<br>
+                等离子弹幕会穿透四个敌人，并且具有穿透减伤，穿透四个敌人后不再造成伤害效果，仅有视觉效果。
             </p>
-            <!--<p class="extra-tip">——额外tip</p>-->
+            <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki/Banshee_Hook">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Entropic_Claymore">查看原版信息</a>
             </button>
             <button id ="href_button">
-                <a href="https://github.com/hocha113/CalamityOverhaul/blob/main/Content/Items/Melee/BansheeHookEcType.cs">查看代码实现</a>
+                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
             </button>
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">女妖之爪</h1>
-            <img src="BansheeHook.png" alt="BansheeHook">
-            <p class="item-id">内部名: BansheeHook</p>
+            <h1 class="img-Item-Title">熵之舞</h1>
+            <img src="EntropicClaymore.png" alt="EntropicClaymore">
+            <p class="item-id">内部名: EntropicClaymore</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 220</p>
-            <p class="item-knockback">击退: 8.5</p>
-            <p class="item-usetimer">使用时间: 21</p>
+            <p class="item-damage">伤害: 92</p>
+            <p class="item-knockback">击退: 普通击退力</p>
+            <p class="item-usetimer">使用时间: 极慢速度</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                攻击时生成大量哀怨之镰，并发射一个追杀敌人的惊惧巨镰<br>
-			    右键积蓄惊惧能量，在能量耗尽前将在鼠标位置召唤大量憎恶镰刀，<br>
-			    憎恶镰刀击中敌人后会额外生成大量的怨灵，给予多种增益<br>
-			    "这个爪子当年在伸出电视机一半的时候因为停电而卡住了，或许它的怨念就是来源于这儿"
+                挥舞中发射几束等离子射线<br>
+                "在熵的累积中，昔日再宏伟的星云也变成了刀中暗淡混沌的尘埃"
             </p>
         </div>        
     </div>
