--- a/cn/weapon/BrinyBaron.html
+++ b/cn/weapon/BrinyBaron.html
@@ -29,9 +29,9 @@
                 <ul>
                     <li><a href="/index.html">返回主页</a></li>
                     <li><a href="/cn/core/weaponList.html">其他武器</a></li>
-                    <li><a href="#">改动</a></li>
-                    <li><a href="#">敌人</a></li>
-                    <li><a href="#">关于模组</a></li>
+                    <li><a href="/cn/core/mechanism.html">机制</a></li>
+                    <li><a href="/cn/core/biology.html">生物</a></li>
+                    <li><a href="/cn/core/aboutMod.html">关于模组</a></li>
                 </ul>
             </nav>
         </aside>
@@ -75,7 +75,7 @@
                 第八下挥舞会发射三颗漩涡弹，击中目标或者物块后在原地生成水龙卷<br>
                 "用那头猪鲨的鳍制成，显然我们并不屑于只用那个会吹泡泡的猪头当武器"
             </p>
-        </div>        
+        </div>
     </div>
 
     <footer class="wiki-footer">
