--- a/cn/weapon/CometQuasher.html
+++ b/cn/weapon/CometQuasher.html
@@ -29,9 +29,9 @@
                 <ul>
                     <li><a href="/index.html">返回主页</a></li>
                     <li><a href="/cn/core/weaponList.html">其他武器</a></li>
-                    <li><a href="#">改动</a></li>
-                    <li><a href="#">敌人</a></li>
-                    <li><a href="#">关于模组</a></li>
+                    <li><a href="/cn/core/mechanism.html">机制</a></li>
+                    <li><a href="/cn/core/biology.html">生物</a></li>
+                    <li><a href="/cn/core/aboutMod.html">关于模组</a></li>
                 </ul>
             </nav>
         </aside>
