--- a/cn/weapon/Arbalest.html
+++ b/cn/weapon/Arbalest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>彗星陨刃-灾厄大修Wiki</title>
+    <title>劲弩-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,21 +37,19 @@
         </aside>
 
         <main class="main-content">
-            <h1>彗星陨刃</h1>
+            <h1>劲弩</h1>
             <p> 
-                彗星陨刃是一把困难模式后可制作的近战武器。<br>
-                彗星陨刃只具有左键的攻击方式，按住鼠标左键时，可以发射陨石弹幕，命中敌人造成两次爆炸伤害。<br>
-                当使用剑刃攻击到敌人时，彗星陨刃会额外从上方发射陨石弹幕。<br>
-                它的最佳前缀是传奇
+                劲弩是一把困难模式后的武器，掉落于双子魔眼。<br>
+                劲弩按住鼠标左键会发射六支高速箭，鼠标右键进行高速连射。<br>
+                它的最佳前缀是虚幻
             </p>
-            <img src="CometQuasher.png" alt="CometQuasher" width=600>
+            <img src="Arbalest.png" alt="Arbalest" width=600>
             <p>
-                彗星陨刃的陨石弹幕具有小范围的爆炸伤害，用非剑刃的弹幕攻击会造成武器面板的一半伤害；<br>
-                而剑刃攻击生成的陨石弹幕仅造成武器面板的四分之一伤害。
+                劲弩的左键与右键攻击都会造成武器面板的伤害。
             </p>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki/Comet_Quasher">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Arbalest">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -59,17 +57,20 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">彗星陨刃</h1>
-            <img src="CometQuasher.png" alt="CometQuasher">
-            <p class="item-id">内部名: CometQuasher</p>
+            <h1 class="img-Item-Title">劲弩</h1>
+            <img src="Arbalest.png" alt="Arbalest">
+            <p class="item-id">内部名: Arbalest</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 80</p>
-            <p class="item-knockback">击退: 2.75</p>
-            <p class="item-usetimer">使用时间: 15</p>
+            <p class="item-damage">伤害: 28</p>
+            <p class="item-knockback">击退: 4</p>
+            <p class="item-usetimer">使用时间: 60</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                发射陨石，真近战击中敌人让更多的陨石从天而降<br>
-			    "中国古代有个人能够不射出箭就让鸟掉下来，终于我们的刀也能做到类似的事了"
+                发射6支高速箭<br>
+                箭矢随着持续发射时间增大体积<br>
+                箭矢体积越大，伤害和击退越高，但扩散范围更大<br>
+                右键进行单发速射<br>
+                "它齿轮仍旧嘎吱嘎吱的转动个不停"
             </p>
         </div>        
     </div>
