--- a/cn/weapon/BlightedCleaver.html
+++ b/cn/weapon/BlightedCleaver.html
@@ -61,8 +61,8 @@
             <p class="item-id">内部名: BlightedCleaver</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 60</p>
-            <p class="item-knockback">击退: 普通击退力</p>
-            <p class="item-usetimer">使用时间: 普通速度</p>
+            <p class="item-knockback">击退: 5.5</p>
+            <p class="item-usetimer">使用时间: 16</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 刀刃击中敌人会积攒暴君能量，并生成大量的屠杀之镰<br>
