--- a/cn/weapon/BurntSienna.html
+++ b/cn/weapon/BurntSienna.html
@@ -59,8 +59,8 @@
             <p class="item-id">内部名: BurntSienna</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 22</p>
-            <p class="item-knockback">击退: 普通击退</p>
-            <p class="item-usetimer">使用时间: 普通速度</p>
+            <p class="item-knockback">击退: 5.5</p>
+            <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 挥舞会抛射沙球<br>
