--- a/cn/weapon/DefiledGreatsword.html
+++ b/cn/weapon/DefiledGreatsword.html
@@ -65,8 +65,8 @@
             <p class="item-id">内部名: DefiledGreatsword</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 112</p>
-            <p class="item-knockback">击退: 很强击退力</p>
-            <p class="item-usetimer">使用时间: 慢速度</p>
+            <p class="item-knockback">击退: 7.5</p>
+            <p class="item-usetimer">使用时间: 26</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 刀刃击中敌人会积攒暴君能量，并生成大量的丛林之镰<br>
