--- a/cn/weapon/EntropicClaymore.html
+++ b/cn/weapon/EntropicClaymore.html
@@ -64,8 +64,8 @@
             <p class="item-id">内部名: EntropicClaymore</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 92</p>
-            <p class="item-knockback">击退: 普通击退力</p>
-            <p class="item-usetimer">使用时间: 极慢速度</p>
+            <p class="item-knockback">击退: 5.25</p>
+            <p class="item-usetimer">使用时间: 28</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 挥舞中发射几束等离子射线<br>
