--- a/cn/weapon/TerrorBlade.html
+++ b/cn/weapon/TerrorBlade.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>彗星陨刃-灾厄大修Wiki</title>
+    <title>惊惧魂刃-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,21 +37,22 @@
         </aside>
 
         <main class="main-content">
-            <h1>彗星陨刃</h1>
+            <h1>惊惧魂刃</h1>
             <p> 
-                彗星陨刃是一把困难模式后可制作的近战武器。<br>
-                彗星陨刃只具有左键的攻击方式，按住鼠标左键时，可以发射陨石弹幕，命中敌人造成两次爆炸伤害。<br>
-                当使用剑刃攻击到敌人时，彗星陨刃会额外从上方发射陨石弹幕。<br>
+                惊惧魂刃是一把月球领主后的近战武器，掉落于噬魂幽花。<br>
+                惊惧魂刃仅可进行鼠标左键攻击，按住鼠标左键时，会发射惊魂爆弹，惊魂爆弹攻击到敌人会进行范围爆破效果。<br>
+                惊魂爆弹具有穿透效果，最多可穿透十二个敌人。<br>
+                使用剑刃攻击到敌人时候，会为惊惧魂刃进行充能，释放出更强力的惊惧剑气。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="CometQuasher.png" alt="CometQuasher" width=600>
+            <img src="TerrorBlade.png" alt="TerrorBlade" width=600>
             <p>
-                彗星陨刃的陨石弹幕具有小范围的爆炸伤害，用非剑刃的弹幕攻击会造成武器面板的一半伤害；<br>
-                而剑刃攻击生成的陨石弹幕仅造成武器面板的四分之一伤害。
+                惊惧爆弹命中敌人时候会造成武器面板的伤害，爆破仅造成武器面板四分之一的伤害；<br>
+                惊惧剑气穿透数量与惊惧爆弹相同，命中时会产生额外一道的剑气攻击，造成武器面板的二分之一伤害。
             </p>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki/Comet_Quasher">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Terror_Blade">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -59,17 +60,18 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">彗星陨刃</h1>
-            <img src="CometQuasher.png" alt="CometQuasher">
-            <p class="item-id">内部名: CometQuasher</p>
+            <h1 class="img-Item-Title">惊惧魂刃</h1>
+            <img src="TerrorBlade.png" alt="TerrorBlade">
+            <p class="item-id">内部名: TerrorBlade</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 80</p>
-            <p class="item-knockback">击退: 2.75</p>
-            <p class="item-usetimer">使用时间: 15</p>
+            <p class="item-damage">伤害: 510</p>
+            <p class="item-knockback">击退: 8.5</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                发射陨石，真近战击中敌人让更多的陨石从天而降<br>
-			    "中国古代有个人能够不射出箭就让鸟掉下来，终于我们的刀也能做到类似的事了"
+                挥舞释放惊惧爆弹<br>
+                刀刃砍中敌人将会增强武器<br>
+                "在很久很久以前...很久...很久以前"
             </p>
         </div>        
     </div>
