--- a/cn/weapon/WindBlade.html
+++ b/cn/weapon/WindBlade.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>彗星陨刃-灾厄大修Wiki</title>
+    <title>风之流-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,21 +37,20 @@
         </aside>
 
         <main class="main-content">
-            <h1>彗星陨刃</h1>
+            <h1>风之流</h1>
             <p> 
-                彗星陨刃是一把困难模式后可制作的近战武器。<br>
-                彗星陨刃只具有左键的攻击方式，按住鼠标左键时，可以发射陨石弹幕，命中敌人造成两次爆炸伤害。<br>
-                当使用剑刃攻击到敌人时，彗星陨刃会额外从上方发射陨石弹幕。<br>
+                风之流是一把血肉宿主/腐巢意志后的近战武器，可用天蓝锭制作。<br>
+                风之流鼠标左键发射大范围气流的气旋，可吸附小型敌人。<br>
+                右键可发射小型气旋，可进行追踪。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="CometQuasher.png" alt="CometQuasher" width=600>
+            <img src="WindBlade.png" alt="WindBlade" width=600>
             <p>
-                彗星陨刃的陨石弹幕具有小范围的爆炸伤害，用非剑刃的弹幕攻击会造成武器面板的一半伤害；<br>
-                而剑刃攻击生成的陨石弹幕仅造成武器面板的四分之一伤害。
+                大范围气旋造成武器面板二分之一的伤害，小型气旋造成武器面板四分之一伤害
             </p>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki/Comet_Quasher">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Wind_Blade">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -59,17 +58,18 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">彗星陨刃</h1>
-            <img src="CometQuasher.png" alt="CometQuasher">
-            <p class="item-id">内部名: CometQuasher</p>
+            <h1 class="img-Item-Title">风之流</h1>
+            <img src="WindBlade.png" alt="WindBlade">
+            <p class="item-id">内部名: WindBlade</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 80</p>
-            <p class="item-knockback">击退: 2.75</p>
-            <p class="item-usetimer">使用时间: 15</p>
+            <p class="item-damage">伤害: 41</p>
+            <p class="item-knockback">击退: 5</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                发射陨石，真近战击中敌人让更多的陨石从天而降<br>
-			    "中国古代有个人能够不射出箭就让鸟掉下来，终于我们的刀也能做到类似的事了"
+                挥舞发射扰乱大范围气流的气旋<br>
+                右键发射追踪的小型气旋<br>
+                "你还以为它只是一阵无害的微风吗？"
             </p>
         </div>        
     </div>
