--- a/cn/weapon/Deathwind.html
+++ b/cn/weapon/Deathwind.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>彗星陨刃-灾厄大修Wiki</title>
+    <title>死亡之风-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,21 +37,22 @@
         </aside>
 
         <main class="main-content">
-            <h1>彗星陨刃</h1>
+            <h1>死亡之风</h1>
             <p> 
-                彗星陨刃是一把困难模式后可制作的近战武器。<br>
-                彗星陨刃只具有左键的攻击方式，按住鼠标左键时，可以发射陨石弹幕，命中敌人造成两次爆炸伤害。<br>
-                当使用剑刃攻击到敌人时，彗星陨刃会额外从上方发射陨石弹幕。<br>
-                它的最佳前缀是传奇
+                死亡之风是一把月球领主后的远程武器，掉落于神明吞噬者。<br>
+                死亡之风按住鼠标左键，可发射三支箭矢。<br>
+                当弹药使用木箭时，可以转化为死亡激光束。<br>
+                当弹药为其他箭矢弹药时，攻击到敌人会发射死亡气流，死亡气流朝扇形无规律发射。<br>
+                它的最佳前缀是虚幻
             </p>
-            <img src="CometQuasher.png" alt="CometQuasher" width=600>
+            <img src="Deathwind.png" alt="Deathwind" width=600>
             <p>
-                彗星陨刃的陨石弹幕具有小范围的爆炸伤害，用非剑刃的弹幕攻击会造成武器面板的一半伤害；<br>
-                而剑刃攻击生成的陨石弹幕仅造成武器面板的四分之一伤害。
+                死亡激光束无限穿透，无穿透减伤，造成武器面板的伤害；<br>
+                死亡气流无限穿透，无穿透减伤，造成武器面板的伤害，每一个命中的箭矢会发射一个死亡气流。
             </p>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki/Comet_Quasher">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Deathwind">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -59,17 +60,18 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">彗星陨刃</h1>
-            <img src="CometQuasher.png" alt="CometQuasher">
-            <p class="item-id">内部名: CometQuasher</p>
+            <h1 class="img-Item-Title">死亡之风</h1>
+            <img src="Deathwind.png" alt="Deathwind">
+            <p class="item-id">内部名: Deathwind</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 80</p>
-            <p class="item-knockback">击退: 2.75</p>
-            <p class="item-usetimer">使用时间: 15</p>
+            <p class="item-damage">伤害: 248</p>
+            <p class="item-knockback">击退: 5</p>
+            <p class="item-usetimer">使用时间: 14</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                发射陨石，真近战击中敌人让更多的陨石从天而降<br>
-			    "中国古代有个人能够不射出箭就让鸟掉下来，终于我们的刀也能做到类似的事了"
+                木箭会被转化为死亡激光束<br>
+                近距离击中敌人会吹出死亡气流<br>
+                “死亡如风，常伴吾身”
             </p>
         </div>        
     </div>
