--- a/cn/weapon/Terratomere.html
+++ b/cn/weapon/Terratomere.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>彗星陨刃-灾厄大修Wiki</title>
+    <title>泰拉巨刃-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,21 +37,21 @@
         </aside>
 
         <main class="main-content">
-            <h1>彗星陨刃</h1>
+            <h1>泰拉巨刃</h1>
             <p> 
-                彗星陨刃是一把困难模式后可制作的近战武器。<br>
-                彗星陨刃只具有左键的攻击方式，按住鼠标左键时，可以发射陨石弹幕，命中敌人造成两次爆炸伤害。<br>
-                当使用剑刃攻击到敌人时，彗星陨刃会额外从上方发射陨石弹幕。<br>
-                它的最佳前缀是传奇
+                泰拉巨刃是一把月球领主后的近战武器，由泰拉刃升级而来。<br>
+                泰拉巨刃仅可进行左键攻击，按住鼠标左键攻击时，会发射三个生命洪流，命中敌人会产生爆破效果。<br>
+                用剑刃攻击到敌人会治疗玩家五生命值。<br>
+                它的最佳前缀是神级
             </p>
-            <img src="CometQuasher.png" alt="CometQuasher" width=600>
+            <img src="Terratomere.png" alt="M1" width=600>
             <p>
-                彗星陨刃的陨石弹幕具有小范围的爆炸伤害，用非剑刃的弹幕攻击会造成武器面板的一半伤害；<br>
-                而剑刃攻击生成的陨石弹幕仅造成武器面板的四分之一伤害。
+                生命洪流具有三次伤害判定，两段伤害造成武器面板的四分之一，一段伤害造成武器面板的二分之一；<br>
+                爆破伤害属于群体伤害，粒子效果内的所有敌人都会受到此伤害。
             </p>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki/Comet_Quasher">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Terratomere">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -59,17 +59,17 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">彗星陨刃</h1>
-            <img src="CometQuasher.png" alt="CometQuasher">
-            <p class="item-id">内部名: CometQuasher</p>
+            <h1 class="img-Item-Title">泰拉巨刃</h1>
+            <img src="Terratomere.png" alt="Terratomere">
+            <p class="item-id">内部名: Terratomere</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 80</p>
-            <p class="item-knockback">击退: 2.75</p>
-            <p class="item-usetimer">使用时间: 15</p>
+            <p class="item-damage">伤害: 185</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 21</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                发射陨石，真近战击中敌人让更多的陨石从天而降<br>
-			    "中国古代有个人能够不射出箭就让鸟掉下来，终于我们的刀也能做到类似的事了"
+                挥舞释放生命洪流<br>
+                “与泰拉瑞亚世界之精华相连”
             </p>
         </div>        
     </div>
