--- a/cn/weapon/BleedingScourge.html
+++ b/cn/weapon/BleedingScourge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>元素长鞭-灾厄大修Wiki</title>
+    <title>血色鞭挞-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,13 +37,13 @@
         </aside>
 
         <main class="main-content">
-            <h1>元素长鞭</h1>
+            <h1>血色鞭挞</h1>
             <p> 
-                元素长鞭是一把月球领主后的召唤武器，是万花筒的上位合成。<br>
-                左键攻击会使召唤物集体攻击敌人，并且附带元素之火减益。<br>
+                血色鞭挞是一把月球领主后的召唤武器，是元素长鞭的上位合成。<br>
+                血色鞭挞左键攻击到敌人会是召唤物集中攻击敌人，并且从天上落下三个血雨，血雨造成武器面板的二分之一伤害。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="ElementWhip.png" alt="ElementWhip" width=600>
+            <img src="BleedingScourge.png" alt="BleedingScourge" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -54,16 +54,16 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">元素长鞭</h1>
-            <img src="ElementWhip.png" alt="M1">
-            <p class="item-id">内部名: ElementWhip</p>
+            <h1 class="img-Item-Title">血色鞭挞</h1>
+            <img src="BleedingScourge.png" alt="BleedingScourge">
+            <p class="item-id">内部名: BleedingScourge</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 192</p>
-            <p class="item-knockback">击退: 2</p>
-            <p class="item-usetimer">使用时间: 30</p>
+            <p class="item-damage">伤害: 191</p>
+            <p class="item-knockback">击退: 3</p>
+            <p class="item-usetimer">使用时间: 40</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                "泰拉的本源连同宇宙的元素一同贯穿世界"
+                击中敌人后进行死亡标记，并令血雨降下
             </p>
         </div>        
     </div>
