--- a/cn/weapon/WhiplashGalactica.html
+++ b/cn/weapon/WhiplashGalactica.html
@@ -43,7 +43,7 @@
                 击中敌人后进行死亡标记，并发射宇宙火球。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="/Asset/M1.gif" alt="M1" width=600>
+            <img src="WhiplashGalactica.png" alt="WhiplashGalactica" width=600>
             <p>
                 宇宙火球仅造成武器面板的二分之一伤害；<br>
                 宇宙火球命中后会爆裂出额外弹幕。
@@ -59,7 +59,7 @@
 
         <div class="image-block">
             <h1 class="img-Item-Title">银河鞭挞</h1>
-            <img src="/Asset/M1.gif" alt="WhiplashGalactica">
+            <img src="WhiplashGalactica.png" alt="WhiplashGalactica">
             <p class="item-id">内部名: WhiplashGalactica</p>
             <p class="item-property">银河鞭挞</p>
             <p class="item-damage">伤害: 302</p>
