--- a/cn/weapon/GhostFireWhip.html
+++ b/cn/weapon/GhostFireWhip.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>元素长鞭-灾厄大修Wiki</title>
+    <title>鬼火鞭-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,13 +37,14 @@
         </aside>
 
         <main class="main-content">
-            <h1>元素长鞭</h1>
+            <h1>鬼火鞭</h1>
             <p> 
-                元素长鞭是一把月球领主后的召唤武器，是万花筒的上位合成。<br>
-                左键攻击会使召唤物集体攻击敌人，并且附带元素之火减益。<br>
+                鬼火鞭是一把月球领主后的召唤武器，是骨鞭的上位合成。<br>
+                鬼火鞭攻击到敌人会产生三个鬼火，鬼火会追踪敌人攻击，并且造成范围伤害。<br>
+                鬼火的伤害仅有武器面板的四分之一。<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="ElementWhip.png" alt="ElementWhip" width=600>
+            <img src="GhostFireWhip.png" alt="GhostFireWhip" width=600>
             <p class="extra-tip">——额外tip</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -54,16 +55,17 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">元素长鞭</h1>
-            <img src="ElementWhip.png" alt="M1">
-            <p class="item-id">内部名: ElementWhip</p>
+            <h1 class="img-Item-Title">鬼火鞭</h1>
+            <img src="GhostFireWhip.png" alt="GhostFireWhip">
+            <p class="item-id">内部名: GhostFireWhip</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 192</p>
-            <p class="item-knockback">击退: 2</p>
+            <p class="item-damage">伤害: 220</p>
+            <p class="item-knockback">击退: 1</p>
             <p class="item-usetimer">使用时间: 30</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                "泰拉的本源连同宇宙的元素一同贯穿世界"
+                “一把很长的鞭子，由地牢冤魂的怒火编制而成；<br>
+                纯粹的热情从地狱散发出来，鼓励你找出谁冤枉了你。”
             </p>
         </div>        
     </div>
