--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -224,6 +224,14 @@
                     
                     <p>命运神启</p>
                 </div>
+
+                <div class="weapon-item" onclick="location.href='/cn/weapon/DaemonsFlame.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/DaemonsFlame.png" alt="DaemonsFlame">
+                    </div>
+                    
+                    <p>鬼火弓</p>
+                </div>
             </div>
         </main>
     </div>
