--- a/cn/weapon/DragonsScaleGreatsword.html
+++ b/cn/weapon/DragonsScaleGreatsword.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>风暴女神之矛-灾厄大修Wiki</title>
+    <title>龙藻巨刃-灾厄大修Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -37,9 +37,9 @@
         </aside>
 
         <main class="main-content">
-            <h1>风暴女神之矛</h1>
+            <h1>龙藻巨刃</h1>
             <p> 
-                风暴女神之矛是一把月亮领主后的近战武器，掉落.....<br>
+                龙藻巨刃是一把.....的....武器，掉落.....<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
@@ -57,16 +57,18 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">风暴女神之矛</h1>
-            <img src="StormGoddessSpear.gif" alt="StormGoddessSpear">
-            <p class="item-id">内部名: StormGoddessSpear</p>
+            <h1 class="img-Item-Title">龙藻巨刃</h1>
+            <img src="DragonsScaleGreatsword.png" alt="DragonsScaleGreatsword">
+            <p class="item-id">内部名: DragonsScaleGreatsword</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 440</p>
-            <p class="item-knockback">击退: 9.75</p>
-            <p class="item-usetimer">使用时间: 19</p>
+            <p class="item-damage">伤害: 10</p>
+            <p class="item-knockback">击退: 0</p>
+            <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                发射出带有毁灭电弧的风暴之吻
+                这里是物品在游戏中的描述<br>
+                这里是物品在游戏中的描述<br>
+                这里是物品在游戏中的描述
             </p>
         </div>        
     </div>
